--- a/src/style.css
+++ b/src/style.css
@@ -1,11 +1,108 @@
+/* Temp css file to make things look like a proper website before webpack step. */
+
 body {
-  min-height: 100vh;
+  height: 100%;
   margin: 0px;
   padding: 0px;
   font-family: -Hero, Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  display: flex;
+  flex-direction: column;
+  background-image: url("rice.jpeg");
+  align-items: center;
+  justify-content: space-between;
 }
 
-/*  */
-#Menu button:hover {
+/* Add effects to menu buttons. */
+#navigation button:hover {
   cursor: pointer;
+}
+
+#navigation button {
+  font-size: 20px;
+  background-color: aliceblue;
+}
+
+#navigation {
+  padding: 15px;
+  padding-bottom: 0px;
+  display: flex;
+  justify-content: center;
+  gap: 30px;
+  width: 100%;
+  margin-bottom: 20px;
+}
+
+#navigation, #content, #footer {
+  background-color: rgba(172, 255, 47, 0.837);
+}
+
+#content {
+  font-family: 'Helvetica Neue, sans-serif';
+  font-size: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  min-height: 90%;
+  width: 60%;
+  margin: 10px;
+  padding: 20px;
+  border-radius: 10px;
+  background-image: url(GoldenFrame.png);
+  background-size: 125% 100%;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+#title {
+  border: 8px solid black;
+  font-size: 30px;
+  font-weight: 1000;
+  font-family: cursive;
+  min-height: 60px;
+  height: 80px;
+  text-align: center;
+  line-height: 0px;
+  margin-bottom: 70px;
+}
+
+#review {
+  /* text-align: center; */
+  width: 300px;
+  line-height: 1.3;
+}
+
+.subtitle {
+  font-weight: 700;
+}
+
+.subcontent {
+  background-color: orange;
+  padding: 20px;
+  margin: 20px;
+  border-radius: 10px;
+  border: 2px solid black;
+  max-width: 400px;
+}
+
+.menuType {
+  font-weight: bold;
+  font-size: 25px;
+  border: 5px solid black;
+}
+
+.price {
+  line-height: 0px;
+  height: 40px;
+  width: fit-content;
+}
+
+.container {
+  display: flex;
+  justify-content: space-between;
+}
+
+#footer {
+  padding: 10px;
+  width: 100%;
+  text-align: center;
 }
