--- a/src/style.css
+++ b/src/style.css
@@ -2,6 +2,7 @@
 
 body {
   height: 100%;
+  width: 100%;
   margin: 0px;
   padding: 0px;
   font-family: -Hero, Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -33,6 +34,7 @@ body {
   gap: 30px;
   width: 100%;
   margin-bottom: 20px;
+  box-sizing: border-box;
 }
 
 #navigation, #content, #footer {
@@ -53,7 +55,7 @@ body {
   flex-direction: column;
   align-items: center;
   min-height: 90%;
-  width: 70%;
+  width: 60%;
   margin: 10px;
   padding: 20px;
   border-radius: 10px;
@@ -74,7 +76,7 @@ body {
   text-align: center;
   line-height: 0px;
   margin-bottom: 70px;
-  min-width: 650px;
+  min-width: 576px;
 }
 
  /* Review from Home Tab */
@@ -139,4 +141,5 @@ body {
   padding: 10px;
   width: 100%;
   text-align: center;
+  box-sizing: border-box;
 }
