--- a/src/style.css
+++ b/src/style.css
@@ -8,7 +8,7 @@ body {
   font-family: -Hero, Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   display: flex;
   flex-direction: column;
-  background-image: url("rice.jpeg");
+  background-image: url("./images/rice.jpeg");
   align-items: center;
   justify-content: space-between;
 }
@@ -59,7 +59,7 @@ body {
   margin: 10px;
   padding: 20px;
   border-radius: 10px;
-  background-image: url(GoldenFrame.png);
+  background-image: url("./images/GoldenFrame.png");
   background-size: 125% 100%;
   background-repeat: no-repeat;
   background-position: center;
